--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"chalk": "^4.1.2",
 		"forever": "^4.0.1",
 		"mongodb": "^4.1.3",
-		"puppeteer": "^5.5.0",
+		"node-fetch": "^2.6.5",
 		"tracer": "^1.1.5"
 	},
 	"engines": {
